@@ -35,7 +35,7 @@ found_colonies_in_the_east = {
 	is_blessing = yes
 	
 	modifier = {
-		diplomatic_reputation = 0.5
+		monthly_reform_progress_modifier = 0.1
 	}
 	ai_will_do = {
 		factor = 10
