@@ -2506,7 +2506,9 @@ estate_church_clerical_ministers = {
 				limit = {
 					has_dlc = "Cradle of Civilization"
 				}
-				NOT = { religion_group = muslim }
+				NOT = { religion = sunni }
+				NOT = { religion = shiite }
+				NOT = { religion = ibadi }
 			}
 			if = {
 				limit = {
@@ -8789,7 +8791,10 @@ estate_church_scholar_connections = {
 	influence = 0.1
 	loyalty = 0.05
 	is_valid = {
-		religion_group = muslim
+		OR = {
+			religion_group = muslim
+			religion_group = jewish_group
+		}
 		has_dlc = "Cradle of Civilization"
 	}
 	can_select = {
@@ -8823,7 +8828,10 @@ estate_church_integrated_school = {
 	influence = 0.1
 	loyalty = 0
 	is_valid = {
-		religion_group = muslim
+		OR = {
+			religion_group = muslim
+			religion_group = jewish_group
+		}
 		has_dlc = "Cradle of Civilization"
 	}
 	can_select = {
