@@ -3570,7 +3570,14 @@ country_event = {
 	id = muslim_school_events.24
 	title = muslim_school_events.24.t
 	desc = muslim_school_events.24.d
-	picture = MYSTIC_IN_PRAYER_eventPicture
+	picture = {
+		trigger = { religion_group = muslim }
+		picture = MYSTIC_IN_PRAYER_eventPicture
+	}
+	picture = {
+		trigger = { religion_group = jewish_group }
+		picture = JUDAISM_eventPicture
+	}
 	
 	is_triggered_only = yes
 
