@@ -54,7 +54,7 @@
  string_start_title_east_slavic_1054: "1054 Überblick: Ostslawische Region"
  string_start_region_east_slavic_1054: "Im Jahr 1054 nimmt die §YKiewer Rus'§!, ein stark dezentralisiertes ostslawisches Großfürstentum, das von der Dynastie der §YRurikiden§! regiert wird, Osteuropa ein und bildet die östliche Grenze des christlichen Europas.\n\nDie Wurzeln der Kiewer Rus' gehen auf das 9. Jahrhundert zurück, als sie von dem Waräger Rurik gegründet wurde, der von den ostslawischen Stämmen selbst zum Herrscher erklärt wurde. Während seiner Herrschaft befriedete er nicht nur die sich bekriegenden Clans, sondern verteidigte sie auch gegen türkische Reiter und schuf ein wohlhabendes Reich, das sich einst vom Weißen Meer im Norden bis zum Schwarzen Meer im Süden erstreckte. Im folgenden Jahrhundert erlebte die Rus' ihr Goldenes Zeitalter. Unter Oleg von Kiew führte ein erfolgreicher Feldzug gegen das §YByzantinische Reich§! zu einem Diktatfrieden, der in zahlreichen Handelsprivilegien zum Vorteil der Rus' resultierte. Infolgedessen florierte der Handel mit Byzanz, was 988 zur Konvertierung der Rus zum orthodoxen Christentum führte. Dies ermöglichte es den Rurikiden, Verbindungen mit ganz Europa zu knüpfen, was sie seither zu einer der am meisten respektierten Adelsfamilien machte.\n\nDie Kiewer Rus' an sich ist aber keine Erbmonarchie, sondern stützt sich auf das §YRota§!-System, ein Senioritätsprinzip, bei dem das älteste Mitglied der Rurikiden gewöhnlich den Titel des Großfürsten erbt. Daher wird es sicher nicht leicht sein, die anhaltenden Fehden innerhalb der Rus' zu beenden, geschweige denn das Reich in Zukunft zu zentralisieren. Dies könnte die gesamte Rus' in einen Bürgerkrieg verwickeln und sie damit anfällig für Invasionen aus dem Osten machen..."
  string_start_title_steppes_1054: "1054 Überblick: Eurasische Steppe"
- string_start_region_steppes_1054: "Trotz ihrer geringen Bevölkerungszahl gilt die §YEurasische Steppe§! als Geburtsort vieler europäischer Nationen und ist doch auch der Friedhof ehemaliger Imperien.\n\nDie vorherrschende Macht in der Steppe ist die lose §YKumanisch-Kiptschakischen§Y Stammeskonföderation, die 1054 die einheimischen §YPetschenegen§Y besiegte und ihre Gebiete konfiszierte, wobei sie ursprünglich aus den östlichen Steppen stammen. Letztere wurden in das Gebiet der §YKiewer Rus'§! gedrängt und beschlagnahmten das Westufer der §YDnister§!. Die berittenen Bogenschützen der Petschenegen stellten in der Vergangenheit eine große Gefahr für die Rus' dar, deren Grenzen häufig von den Steppenvölkern überfallen wurden. Die Zeit wird zeigen, ob diese Reiter die Feinde der Russen bleiben, oder ob sie sich gegen ihre gemeinsamen Feinde verbünden.\n\nDie Städte an der Küste des §YSchwarzen Meeres§! stellen eine wichtige Verbindung für den Handel mit §YKonstantinopel§! und dem Mittelmeer dar. Viele dieser Städte sind das Eigentum des Herrschers von §YTmutarakan§!, der selbst Vasall des Großfürsten von Kiew ist. Sicherlich werden die Kumanen versuchen, alle in diesen Städten gelagerten Reichtümer in ihre Hände zu bekommen, und es ist zweifelhaft, ob die Kiewer Rus diese Exklaven auf Dauer verteidigen kann.\n\nDie nordkaukasischen Berge werden von unzähligen Clans und Stämmen bewohnt, die alle unterschiedlichen Kulturen und Religionen angehören, nachdem sie allesamt §Ybyzantinische§! missionarische Versuche abschütteln konnten. Im Osten leben die letzten Überreste der §Yhunnischen§!, §Ychasarischen§! und §Yawarischen§! Imperien, deren Khans in den vergangenen Jahrhunderten mächtige Männer waren, die über weite Teile Osteuropas herrschten. Weiter westlich verkörpert §YAlanien§! die lokale Obrigkeit, das selbst aber nur ein Staatenbund verschiedener Stämme ist. An ihrer Ostgrenze leben die §YTscherkessen§!, deren Clans zwar geteilt sind, die aber notfalls zur Zusammenarbeit gegen fremde Eindringlinge gezwungen werden könnten.\n\nDer kalte Norden ist die Heimat primitiver §YUgrischer§! Stämme, die, an das raue Klima gewöhnt, ihren traditionellen Bräuchen unbeeinflusst von fremden Einflüssen immer treu geblieben sind. Die Mündung der Flüsse Wolga und Kama wird von den Nachkommen von §YKubral Dulo§!, dem Gründer des Großbulgarischen Reiches im 7. Jahrhundert, regiert - daher ihr Name '§YWolgabulgarien§! Trotz ihrer schlichten Gesellschaftsform bleiben sie dank ihrer Lage, die es ihnen erlaubt, freundschaftliche Beziehungen zu ihren Nachbarn zu unterhalten, eine bedeutende Handelsmacht."
+ string_start_region_steppes_1054: "Trotz ihrer geringen Bevölkerungszahl gilt die §YEurasische Steppe§! als Geburtsort vieler europäischer Nationen und ist doch auch der Friedhof ehemaliger Imperien.\n\nDie vorherrschende Macht in der Steppe ist die lose §YKumanisch-Kiptschakischen§! Stammeskonföderation, die 1054 die einheimischen §YPetschenegen§! besiegte und ihre Gebiete konfiszierte, wobei sie ursprünglich aus den östlichen Steppen stammen. Letztere wurden in das Gebiet der §YKiewer Rus'§! gedrängt und beschlagnahmten das Westufer der §YDnister§!. Die berittenen Bogenschützen der Petschenegen stellten in der Vergangenheit eine große Gefahr für die Rus' dar, deren Grenzen häufig von den Steppenvölkern überfallen wurden. Die Zeit wird zeigen, ob diese Reiter die Feinde der Russen bleiben, oder ob sie sich gegen ihre gemeinsamen Feinde verbünden.\n\nDie Städte an der Küste des §YSchwarzen Meeres§! stellen eine wichtige Verbindung für den Handel mit §YKonstantinopel§! und dem Mittelmeer dar. Viele dieser Städte sind das Eigentum des Herrschers von §YTmutarakan§!, der selbst Vasall des Großfürsten von Kiew ist. Sicherlich werden die Kumanen versuchen, alle in diesen Städten gelagerten Reichtümer in ihre Hände zu bekommen, und es ist zweifelhaft, ob die Kiewer Rus diese Exklaven auf Dauer verteidigen kann.\n\nDie nordkaukasischen Berge werden von unzähligen Clans und Stämmen bewohnt, die alle unterschiedlichen Kulturen und Religionen angehören, nachdem sie allesamt §Ybyzantinische§! missionarische Versuche abschütteln konnten. Im Osten leben die letzten Überreste der §Yhunnischen§!, §Ychasarischen§! und §Yawarischen§! Imperien, deren Khans in den vergangenen Jahrhunderten mächtige Männer waren, die über weite Teile Osteuropas herrschten. Weiter westlich verkörpert §YAlanien§! die lokale Obrigkeit, das selbst aber nur ein Staatenbund verschiedener Stämme ist. An ihrer Ostgrenze leben die §YTscherkessen§!, deren Clans zwar geteilt sind, die aber notfalls zur Zusammenarbeit gegen fremde Eindringlinge gezwungen werden könnten.\n\nDer kalte Norden ist die Heimat primitiver §YUgrischer§! Stämme, die, an das raue Klima gewöhnt, ihren traditionellen Bräuchen unbeeinflusst von fremden Einflüssen immer treu geblieben sind. Die Mündung der Flüsse Wolga und Kama wird von den Nachkommen von §YKubral Dulo§!, dem Gründer des Großbulgarischen Reiches im 7. Jahrhundert, regiert - daher ihr Name '§YWolgabulgarien§!. Trotz ihrer schlichten Gesellschaftsform bleiben sie dank ihrer Lage, die es ihnen erlaubt, freundschaftliche Beziehungen zu ihren Nachbarn zu unterhalten, eine bedeutende Handelsmacht."
 #vanilla
  SEVEN_YEARS_WAR_DESC: "Der Siebenjährige Krieg war einer der größten Konflikte seiner Zeit. Gekämpft wurde anfangs vor allem zwischen Preußen und Österreich, bald aber auch mit Frankreich und Russland auf der österreichischen Seite und Großbritannien auf der preußischen Seite."
  string_start_tag_europe: "Europa steht im Jahr [GetYear] am Rande des §YZeitalters der Entdeckung§!, erholt sich aber noch vom Schock des gescheiterten Kreuzzuges von Warna sowie der Bedrohung des §YOsmanischen Reiches§! im Osten.\n\nDer Vertrag von Tours hat Westeuropa mit einem unsicheren Waffenstillstand zurückgelassen, einem, der so aussieht, als könne er jederzeit wegen des Ehrgeizes der Könige §YFrankreichs§! oder §YEnglands§! oder dem Herzog §YBurgunds§! brechen.\n\nIm Norden bleibt die Kalmarer Union trotzt ihrer Absetzung des pommerischen Königs durch den Hanseorden und den dissidentischen §YSchwedischen§! und §YDänischen§! Adligen, in Kraft.\n\nMit dem Aufziehen der Hochrenaissannce bleibt die Lage in §YItalien§! und §YDeutschland§! aufgrund der kontinuierlichen Spannungen zwischen dem §YKaiser§! und den vielen autonomen Fürsten weiter angespannt.\n\nDer gesamte Kontinent steht am Rande großer Veränderungen und es wird an Euch liegen, §Y[Root.GetName]§! durch diese Periode zu führen"
