@@ -225,26 +225,26 @@
  muslim_school_events.24.p: "Gewährt dem Gelehrten der Aschkenasim-Schule das Privileg."
  muslim_school_events.24.q: "Gewährt dem Gelehrten der Sephardim-Schule das Privileg."
  muslim_school_events.24.r: "Gewährt dem Gelehrten der Mizrachim-Schule das Privileg."
- allows_every_time_invite_of_ibadi_school: "Allows to invite a Scholar from the §Ibadi School§! without diplomatic relations."
- allows_every_time_invite_of_azraqi_school: "Allows to invite a Scholar from the §YAzraqi School§! without diplomatic relations."
- allows_every_time_invite_of_sufri_school: "Allows to invite a Scholar from the §YSufri School§! without diplomatic relations."
- allows_every_time_invite_of_alevi_school: "Allows to invite a Scholar from the §YAlevi School§! without diplomatic relations."
- allows_every_time_invite_of_alawi_school: "Allows to invite a Scholar from the §YAlawi School§! without diplomatic relations."
- allows_every_time_invite_of_nizari_school: "Allows to invite a Scholar from the §YNizari School§! without diplomatic relations."
- allows_every_time_invite_of_qarmati_school: "Allows to invite a Scholar from the §YQarmati School§! without diplomatic relations."
- allows_every_time_invite_of_ashkenazi_school: "Allows to invite a Scholar from the §YAshkenazi School§! without diplomatic relations."
- allows_every_time_invite_of_sephardi_school: "Allows to invite a Scholar from the §YSephardi School§! without diplomatic relations."
- allows_every_time_invite_of_mizrahi_school: "Allows to invite a Scholar from the §YMizrahi School§! without diplomatic relations."
- ibadi_school_bonus_tt: "Diplomatic Reputation: §G+1.00§!"
- azraqi_school_bonus_tt: "Missionary Strength: §G+1.0%§!"
- sufri_school_bonus_tt: "Technology Cost: §G-5.0%§!"
- alevi_school_bonus_tt: "Religious Unity: §G+50.0%§!"
- alawi_school_bonus_tt: "Trade Efficiency: §G+10.0%§!"
- nizari_school_bonus_tt: "Discipline: §G+5.0%§!"
- qarmati_school_bonus_tt: "Core-Creation Cost: §G-10.0%§!"
- ashkenazi_school_bonus_tt: "Idea Cost: §G-10.0%§!"
- sephardi_school_bonus_tt: "Monthly Reform Progress Modifier: §G+15.0%§!"
- mizrahi_school_bonus_tt: "Merchant Trade Power: §G+5.00§!"
+ allows_every_time_invite_of_ibadi_school: "Erlaubt die Einladung eines Gelehrten der §YIbadi-Schule§! ohne diplomatische Beziehungen."
+ allows_every_time_invite_of_azraqi_school: "Erlaubt die Einladung eines Gelehrten der §YAzraqi-Schule§! ohne diplomatische Beziehungen."
+ allows_every_time_invite_of_sufri_school: "Erlaubt die Einladung eines Gelehrten der §YSufri-Schule§! ohne diplomatische Beziehungen."
+ allows_every_time_invite_of_alevi_school: "Erlaubt die Einladung eines Gelehrten der §YAlevi-Schule§! ohne diplomatische Beziehungen."
+ allows_every_time_invite_of_alawi_school: "Erlaubt die Einladung eines Gelehrten der §YAlawi-Schule§! ohne diplomatische Beziehungen."
+ allows_every_time_invite_of_nizari_school: "Erlaubt die Einladung eines Gelehrten der §YNizari-Schule§! ohne diplomatische Beziehungen."
+ allows_every_time_invite_of_qarmati_school: "Erlaubt die Einladung eines Gelehrten der §YQarmati-Schule§! ohne diplomatische Beziehungen."
+ allows_every_time_invite_of_ashkenazi_school: "Erlaubt die Einladung eines Gelehrten der §YAschkenasim-Schule§! ohne diplomatische Beziehungen."
+ allows_every_time_invite_of_sephardi_school: "Erlaubt die Einladung eines Gelehrten der §YSephardim-Schule§! ohne diplomatische Beziehungen."
+ allows_every_time_invite_of_mizrahi_school: "Erlaubt die Einladung eines Gelehrten der §YMizrachim-Schule§! ohne diplomatische Beziehungen."
+ ibadi_school_bonus_tt: "Diplomatische Reputation: §G+1.00§!"
+ azraqi_school_bonus_tt: "Missionarsstärke: §G+1.0%§!"
+ sufri_school_bonus_tt: "Kosten (Technologien): §G-5.0%§!"
+ alevi_school_bonus_tt: "Religiöse Einheit: §G+50.0%§!"
+ alawi_school_bonus_tt: "Handelseffizienz: §G+10.0%§!"
+ nizari_school_bonus_tt: "Disziplin: §G+5.0%§!"
+ qarmati_school_bonus_tt: "Kosten (Kernprovinzen): §G-10.0%§!"
+ ashkenazi_school_bonus_tt: "Kosten (Ideen): §G-10.0%§!"
+ sephardi_school_bonus_tt: "Reformfortschritt (Monatlich): §G+15.0%§!"
+ mizrahi_school_bonus_tt: "Handelsmacht (Händler): §G+5.00§!"
  monsoon_events.1.t: "Extreme Flut in [severe_monsoon_province.GetAreaName]"
  monsoon_events.1.d: "Die diesjährige Flut war in [severe_monsoon_province.GetAreaName] weit schwerer als erwartet. Die starken Wellen haben sowohl den ländlichen als auch städtischen Siedlungen extremen Schaden zugefügt. Es wird eine kostspielige Hilfsaktion nötig sein, um einen Teil des Schadens rückgängig zu machen. Es dauert jedoch einige Zeit, bis [severe_monsoon_province.GetAreaName] vollständig genesen ist."
  monsoon_events.2.t: "Flut bleibt in [monsoon_failure_province.GetAreaName] aus"
