@@ -12,6 +12,7 @@
 -It is no longer possible for Turkish monarchies to change primary culture
 -Colonies should no longer remain without religion or culture
 -monument_events.1 should now trigger as intended
+-Jewish nations have now access to Muslim School privileges
 -Other minor localization/bug fixes
 
 # v 2.2.5 #
